Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Idac04e88ed0366e26ad6b0d8616e1867b5fa3d4a

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -56,6 +56,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> টা বস্তু</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g> টা) যোগ দিয়ক"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"কেমেৰা"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"ডাউনল’ড"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"প্ৰিয়"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"স্ক্ৰীনশ্বট"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>ক <xliff:g id="COUNT">^2</xliff:g> টা অডিঅ’ ফাইল সংশোধন কৰিবলৈ অনুমতি দিবনে?</item>
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g>ক <xliff:g id="COUNT">^2</xliff:g> টা অডিঅ’ ফাইল সংশোধন কৰিবলৈ অনুমতি দিবনে?</item>
