--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"추가"</string>
     <string name="deselect" msgid="4297825044827769490">"선택 해제"</string>
     <string name="select" msgid="2704765470563027689">"선택"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">최대 <xliff:g id="COUNT_1">^1</xliff:g>개 항목 선택</item>
+      <item quantity="one">최대 <xliff:g id="COUNT_0">^1</xliff:g>개 항목 선택</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"최근"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"선택 항목 보기"</string>
     <string name="picker_photos" msgid="7415035516411087392">"사진"</string>
@@ -56,6 +59,12 @@
       <item quantity="one">항목 <xliff:g id="COUNT_0">^1</xliff:g>개</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"추가(<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"카메라"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"다운로드"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"즐겨찾기"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"스크린샷"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g>에서 오디오 파일 <xliff:g id="COUNT">^2</xliff:g>개를 수정하도록 허용하시겠습니까?</item>
       <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g>에서 이 오디오 파일을 수정하도록 허용하시겠습니까?</item>
