--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -56,6 +56,12 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> आयटम</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g>) जोडा"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"कॅमेरा"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"डाउनलोड"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"आवडते"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"स्क्रीनशॉट"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> ला <xliff:g id="COUNT">^2</xliff:g> ऑडिओ फाइल सुधारित करण्याची परवानगी द्यायची आहे का?</item>
       <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> ला ही ऑडिओ फाइल सुधारित करण्याची परवानगी द्यायची आहे का?</item>
