--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -48,7 +48,11 @@
     <string name="add" msgid="2894574044585549298">"Adăugați"</string>
     <string name="deselect" msgid="4297825044827769490">"Debifați"</string>
     <string name="select" msgid="2704765470563027689">"Selectați"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="few">Selectați maximum <xliff:g id="COUNT_1">^1</xliff:g> elemente</item>
+      <item quantity="other">Selectați maximum <xliff:g id="COUNT_1">^1</xliff:g> de elemente</item>
+      <item quantity="one">Selectați maximum <xliff:g id="COUNT_0">^1</xliff:g> element</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Recente"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Vedeți elementele selectate"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Fotografii"</string>
@@ -59,6 +63,12 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> element</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Adăugați (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Cameră"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Descărcări"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Preferate"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Capturi de ecran"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="few">Permiteți ca <xliff:g id="APP_NAME_1">^1</xliff:g> să modifice <xliff:g id="COUNT">^2</xliff:g> fișiere audio?</item>
       <item quantity="other">Permiteți ca <xliff:g id="APP_NAME_1">^1</xliff:g> să modifice <xliff:g id="COUNT">^2</xliff:g> de fișiere audio?</item>
