--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"එක් කරන්න"</string>
     <string name="deselect" msgid="4297825044827769490">"නොතෝරන්න"</string>
     <string name="select" msgid="2704765470563027689">"තෝරන්න"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">අයිතම <xliff:g id="COUNT_1">^1</xliff:g>ක් දක්වා තෝරන්න</item>
+      <item quantity="other">අයිතම <xliff:g id="COUNT_1">^1</xliff:g>ක් දක්වා තෝරන්න</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"මෑත"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"තෝරා ගත් දේවල් බලන්න"</string>
     <string name="picker_photos" msgid="7415035516411087392">"ඡායාරූප"</string>
@@ -56,6 +59,12 @@
       <item quantity="other">අයිතම <xliff:g id="COUNT_1">^1</xliff:g></item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"එක් කරන්න (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"කැමරාව"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"බාගැනීම්"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"ප්‍රියතමයන්"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"තිර රූ"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>ට ඕඩියෝ ගොනු <xliff:g id="COUNT">^2</xliff:g>ක් වෙනස් කිරීමට ඉඩ දෙන්නද?</item>
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g>ට ඕඩියෝ ගොනු <xliff:g id="COUNT">^2</xliff:g>ක් වෙනස් කිරීමට ඉඩ දෙන්නද?</item>
