--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"சேர்"</string>
     <string name="deselect" msgid="4297825044827769490">"தேர்வுநீக்கு"</string>
     <string name="select" msgid="2704765470563027689">"தேர்ந்தெடு"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> படங்களைத் தேர்ந்தெடுங்கள்</item>
+      <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> படத்தைத் தேர்ந்தெடுங்கள்</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"சமீபத்தியவை"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"தேர்ந்தெடுத்தவற்றைக் காட்டு"</string>
     <string name="picker_photos" msgid="7415035516411087392">"படங்கள்"</string>
@@ -56,6 +59,12 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> படம்</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g>) படங்களைச் சேர்"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"கேமரா"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"பதிவிறக்கங்கள்"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"பிடித்தவை"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"ஸ்கிரீன்ஷாட்டுகள்"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="COUNT">^2</xliff:g> ஆடியோ ஃபைல்களில் மாற்றங்களைச் செய்ய <xliff:g id="APP_NAME_1">^1</xliff:g> ஆப்ஸை அனுமதிக்கவா?</item>
       <item quantity="one">இந்த ஆடியோ ஃபைலில் மாற்றங்களைச் செய்ய <xliff:g id="APP_NAME_0">^1</xliff:g> ஆப்ஸை அனுமதிக்கவா?</item>
