--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -50,7 +50,12 @@
     <string name="add" msgid="2894574044585549298">"Додати"</string>
     <string name="deselect" msgid="4297825044827769490">"Не вибирати"</string>
     <string name="select" msgid="2704765470563027689">"Вибрати"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">Виберіть не більше ніж <xliff:g id="COUNT_1">^1</xliff:g> об’єкт</item>
+      <item quantity="few">Виберіть не більше ніж <xliff:g id="COUNT_1">^1</xliff:g> об’єкти</item>
+      <item quantity="many">Виберіть не більше ніж <xliff:g id="COUNT_1">^1</xliff:g> об’єктів</item>
+      <item quantity="other">Виберіть не більше ніж <xliff:g id="COUNT_1">^1</xliff:g> об’єкта</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Нещодавні"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Переглянути вибране"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Фото"</string>
@@ -62,6 +67,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> файлу</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Додати (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Камера"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Завантаження"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Вибране"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Знімки екрана"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Дозволити додатку <xliff:g id="APP_NAME_1">^1</xliff:g> змінити <xliff:g id="COUNT">^2</xliff:g> аудіофайл?</item>
       <item quantity="few">Дозволити додатку <xliff:g id="APP_NAME_1">^1</xliff:g> змінити <xliff:g id="COUNT">^2</xliff:g> аудіофайли?</item>
