--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -54,7 +54,14 @@
     <string name="add" msgid="2894574044585549298">"إضافة"</string>
     <string name="deselect" msgid="4297825044827769490">"إلغاء الاختيار"</string>
     <string name="select" msgid="2704765470563027689">"اختيار"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="zero">اختَر ما يصل إلى <xliff:g id="COUNT_1">^1</xliff:g> عنصر.</item>
+      <item quantity="two">اختَر ما يصل إلى عنصرين (<xliff:g id="COUNT_1">^1</xliff:g>).</item>
+      <item quantity="few">اختَر ما يصل إلى <xliff:g id="COUNT_1">^1</xliff:g> عناصر.</item>
+      <item quantity="many">اختَر ما يصل إلى <xliff:g id="COUNT_1">^1</xliff:g> عنصرًا.</item>
+      <item quantity="other">اختَر ما يصل إلى <xliff:g id="COUNT_1">^1</xliff:g> عنصر.</item>
+      <item quantity="one">اختَر ما يصل إلى عنصر واحد (<xliff:g id="COUNT_0">^1</xliff:g>).</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"الأحدث"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"عرض المحتوى المحدّد"</string>
     <string name="picker_photos" msgid="7415035516411087392">"الصور"</string>
@@ -68,6 +75,12 @@
       <item quantity="one">عنصر واحد (<xliff:g id="COUNT_0">^1</xliff:g>)</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"إضافة (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"الكاميرا"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"العناصر التي تم تنزيلها"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"العناصر المفضّلة"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"لقطات الشاشة"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="zero">هل تريد السماح لتطبيق <xliff:g id="APP_NAME_1">^1</xliff:g> بتعديل <xliff:g id="COUNT">^2</xliff:g> ملف صوتي؟</item>
       <item quantity="two">هل تريد السماح لتطبيق <xliff:g id="APP_NAME_1">^1</xliff:g> بتعديل ملفين صوتيين (<xliff:g id="COUNT">^2</xliff:g>)؟</item>
