--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -48,7 +48,11 @@
     <string name="add" msgid="2894574044585549298">"Dodaj"</string>
     <string name="deselect" msgid="4297825044827769490">"Opozovi izbor"</string>
     <string name="select" msgid="2704765470563027689">"Izaberi"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">Izaberite najviše <xliff:g id="COUNT_1">^1</xliff:g> stavku</item>
+      <item quantity="few">Izaberite najviše <xliff:g id="COUNT_1">^1</xliff:g> stavke</item>
+      <item quantity="other">Izaberite najviše <xliff:g id="COUNT_1">^1</xliff:g> stavki</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Nedavno"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Prikaži izabrano"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Slike"</string>
@@ -59,6 +63,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> stavki</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Dodaj (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Kamera"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Preuzeto"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Omiljeno"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Snimci ekrana"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Želite li da dozvolite da <xliff:g id="APP_NAME_1">^1</xliff:g> izmeni <xliff:g id="COUNT">^2</xliff:g> audio datoteku?</item>
       <item quantity="few">Želite li da dozvolite da <xliff:g id="APP_NAME_1">^1</xliff:g> izmeni <xliff:g id="COUNT">^2</xliff:g> audio datoteke?</item>
