--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Добавяне"</string>
     <string name="deselect" msgid="4297825044827769490">"Премахване на избора"</string>
     <string name="select" msgid="2704765470563027689">"Избиране"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">Изберете най-много <xliff:g id="COUNT_1">^1</xliff:g> елемента</item>
+      <item quantity="one">Изберете най-много <xliff:g id="COUNT_0">^1</xliff:g> елемент</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Скорошно"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Преглед на избраното"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Снимки"</string>
@@ -56,6 +59,12 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> елемент</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Добавяне (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Камера"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Изтегляния"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Любими"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Екранни снимки"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Да се разреши ли на <xliff:g id="APP_NAME_1">^1</xliff:g> да промени <xliff:g id="COUNT">^2</xliff:g> аудиофайла?</item>
       <item quantity="one">Да се разреши ли на <xliff:g id="APP_NAME_0">^1</xliff:g> да промени този аудиофайл?</item>
