--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -56,6 +56,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g>টি আইটেম</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g>)টি যোগ করুন"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"ক্যামেরা"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"ডাউনলোড করা আইটেম"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"পছন্দসই আইটেম"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"স্ক্রিনশট"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>-কে <xliff:g id="COUNT">^2</xliff:g>টি অডিও ফাইল পরিবর্তন করার অনুমতি দিতে চান?</item>
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g>-কে <xliff:g id="COUNT">^2</xliff:g>টি অডিও ফাইল পরিবর্তন করার অনুমতি দিতে চান?</item>
