--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"जोड़ें"</string>
     <string name="deselect" msgid="4297825044827769490">"चुना हुआ हटाएं"</string>
     <string name="select" msgid="2704765470563027689">"चुनें"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">ज़्यादा से ज़्यादा <xliff:g id="COUNT_1">^1</xliff:g> आइटम चुनें</item>
+      <item quantity="other">ज़्यादा से ज़्यादा <xliff:g id="COUNT_1">^1</xliff:g> आइटम चुनें</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"हाल ही की फ़ोटो और वीडियो"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"चुनी गई फ़ोटो या वीडियो देखें"</string>
     <string name="picker_photos" msgid="7415035516411087392">"फ़ोटो"</string>
@@ -56,6 +59,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> आइटम</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g>) जोड़ें"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"कैमरा"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"डाउनलोड की गई चीज़ें"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"पसंदीदा"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"स्क्रीनशॉट"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">क्या आप <xliff:g id="APP_NAME_1">^1</xliff:g> को <xliff:g id="COUNT">^2</xliff:g> ऑडियो फ़ाइल में बदलाव करने की अनुमति देना चाहते हैं?</item>
       <item quantity="other">क्या आप <xliff:g id="APP_NAME_1">^1</xliff:g> को <xliff:g id="COUNT">^2</xliff:g> ऑडियो फ़ाइलों में बदलाव करने की अनुमति देना चाहते हैं?</item>
