--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Aggiungi"</string>
     <string name="deselect" msgid="4297825044827769490">"Deseleziona"</string>
     <string name="select" msgid="2704765470563027689">"Seleziona"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">Seleziona fino a <xliff:g id="COUNT_1">^1</xliff:g> elementi</item>
+      <item quantity="one">Seleziona massimo <xliff:g id="COUNT_0">^1</xliff:g> elemento</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Recenti"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Visualizza selezione"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Foto"</string>
@@ -56,6 +59,12 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> elemento</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Aggiungi (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Fotocamera"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Download"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Preferiti"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Screenshot"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Consentire all\'app <xliff:g id="APP_NAME_1">^1</xliff:g> di modificare <xliff:g id="COUNT">^2</xliff:g> file audio?</item>
       <item quantity="one">Consentire all\'app <xliff:g id="APP_NAME_0">^1</xliff:g> di modificare questo file audio?</item>
