--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -50,7 +50,12 @@
     <string name="add" msgid="2894574044585549298">"הוספה"</string>
     <string name="deselect" msgid="4297825044827769490">"ביטול הבחירה"</string>
     <string name="select" msgid="2704765470563027689">"בחירה"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="two">יש לבחור <xliff:g id="COUNT_1">^1</xliff:g> פריטים לכל היותר</item>
+      <item quantity="many">יש לבחור <xliff:g id="COUNT_1">^1</xliff:g> פריטים לכל היותר</item>
+      <item quantity="other">יש לבחור <xliff:g id="COUNT_1">^1</xliff:g> פריטים לכל היותר</item>
+      <item quantity="one">יש לבחור פריט אחד (<xliff:g id="COUNT_0">^1</xliff:g>) לכל היותר</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"אחרונות"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"הצגת הפריטים שנבחרו"</string>
     <string name="picker_photos" msgid="7415035516411087392">"תמונות"</string>
@@ -62,6 +67,12 @@
       <item quantity="one">פריט אחד (<xliff:g id="COUNT_0">^1</xliff:g>)</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"הוספה (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"מצלמה"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"הורדות"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"מועדפים"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"צילומי מסך"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="two">לאפשר לאפליקציה <xliff:g id="APP_NAME_1">^1</xliff:g> לשנות <xliff:g id="COUNT">^2</xliff:g> קובצי אודיו?</item>
       <item quantity="many">לאפשר לאפליקציה <xliff:g id="APP_NAME_1">^1</xliff:g> לשנות <xliff:g id="COUNT">^2</xliff:g> קובצי אודיו?</item>
