--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -50,7 +50,12 @@
     <string name="add" msgid="2894574044585549298">"Pridėti"</string>
     <string name="deselect" msgid="4297825044827769490">"Panaikinti pasirinkimą"</string>
     <string name="select" msgid="2704765470563027689">"Pasirinkti"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">Pasirinkite iki <xliff:g id="COUNT_1">^1</xliff:g> elemento</item>
+      <item quantity="few">Pasirinkite iki <xliff:g id="COUNT_1">^1</xliff:g> elementų</item>
+      <item quantity="many">Pasirinkite iki <xliff:g id="COUNT_1">^1</xliff:g> elemento</item>
+      <item quantity="other">Pasirinkite iki <xliff:g id="COUNT_1">^1</xliff:g> elementų</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Naujausios"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Žiūrėti pasirinktus"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Nuotraukos"</string>
@@ -62,6 +67,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> elementų</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Pridėti (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Vaizdo kamera"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Atsisiuntimai"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Mėgstamiausi"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Ekrano kopijos"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Leisti programai „<xliff:g id="APP_NAME_1">^1</xliff:g>“ keisti <xliff:g id="COUNT">^2</xliff:g> garso failą?</item>
       <item quantity="few">Leisti programai „<xliff:g id="APP_NAME_1">^1</xliff:g>“ keisti <xliff:g id="COUNT">^2</xliff:g> garso failus?</item>
