--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -59,6 +59,12 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> item</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Toevoegen (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Camera"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Downloads"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Favorieten"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Screenshots"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> toestaan <xliff:g id="COUNT">^2</xliff:g> audiobestanden te wijzigen?</item>
       <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> toestaan dit audiobestand te wijzigen?</item>
