--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -56,6 +56,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> ਆਈਟਮਾਂ</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g>) ਸ਼ਾਮਲ ਕਰੋ"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"ਕੈਮਰਾ"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"ਡਾਊਨਲੋਡ"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"ਮਨਪਸੰਦ"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"ਸਕ੍ਰੀਨਸ਼ਾਟ"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">ਕੀ <xliff:g id="APP_NAME_1">^1</xliff:g> ਨੂੰ <xliff:g id="COUNT">^2</xliff:g> ਆਡੀਓ ਫ਼ਾਈਲ ਨੂੰ ਸੋਧਣ ਦੇਣਾ ਹੈ?</item>
       <item quantity="other">ਕੀ <xliff:g id="APP_NAME_1">^1</xliff:g> ਨੂੰ <xliff:g id="COUNT">^2</xliff:g> ਆਡੀਓ ਫ਼ਾਈਲਾਂ ਨੂੰ ਸੋਧਣ ਦੇਣਾ ਹੈ?</item>
