--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -50,7 +50,12 @@
     <string name="add" msgid="2894574044585549298">"Dodaj"</string>
     <string name="deselect" msgid="4297825044827769490">"Počisti izbiro"</string>
     <string name="select" msgid="2704765470563027689">"Izberi"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">Izberite največ <xliff:g id="COUNT_1">^1</xliff:g> element</item>
+      <item quantity="two">Izberite največ <xliff:g id="COUNT_1">^1</xliff:g> elementa</item>
+      <item quantity="few">Izberite največ <xliff:g id="COUNT_1">^1</xliff:g> elemente</item>
+      <item quantity="other">Izberite največ <xliff:g id="COUNT_1">^1</xliff:g> elementov</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Nedavno"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Prikaži izbrano"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Fotografije"</string>
@@ -62,6 +67,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> elementov</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Dodaj (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Fotoaparat"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Prenosi"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Priljubljeno"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Posnetki zaslona"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Želite dovoliti aplikaciji <xliff:g id="APP_NAME_1">^1</xliff:g>, da spremeni <xliff:g id="COUNT">^2</xliff:g> zvočno datoteko?</item>
       <item quantity="two">Želite dovoliti aplikaciji <xliff:g id="APP_NAME_1">^1</xliff:g>, da spremeni <xliff:g id="COUNT">^2</xliff:g> zvočni datoteki?</item>
