--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Shto"</string>
     <string name="deselect" msgid="4297825044827769490">"Hiq përzgjedhjen"</string>
     <string name="select" msgid="2704765470563027689">"Zgjidh"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">Zgjidh deri në <xliff:g id="COUNT_1">^1</xliff:g> artikuj</item>
+      <item quantity="one">Zgjidh deri në <xliff:g id="COUNT_0">^1</xliff:g> artikull</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Të fundit"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Shiko të zgjedhurat"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Fotografitë"</string>
@@ -56,6 +59,16 @@
       <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> artikull</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Shto (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <!-- no translation found for picker_category_camera (4857367052026843664) -->
+    <skip />
+    <!-- no translation found for picker_category_downloads (793866660287361900) -->
+    <skip />
+    <!-- no translation found for picker_category_favorites (7008495397818966088) -->
+    <skip />
+    <!-- no translation found for picker_category_screenshots (7216102327587644284) -->
+    <skip />
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Të lejohet <xliff:g id="APP_NAME_1">^1</xliff:g> që të modifikojë <xliff:g id="COUNT">^2</xliff:g> skedarë audio?</item>
       <item quantity="one">Të lejohet <xliff:g id="APP_NAME_0">^1</xliff:g> që ta modifikojë këtë skedar audio?</item>
