--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -48,7 +48,11 @@
     <string name="add" msgid="2894574044585549298">"Додај"</string>
     <string name="deselect" msgid="4297825044827769490">"Опозови избор"</string>
     <string name="select" msgid="2704765470563027689">"Изабери"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">Изаберите највише <xliff:g id="COUNT_1">^1</xliff:g> ставку</item>
+      <item quantity="few">Изаберите највише <xliff:g id="COUNT_1">^1</xliff:g> ставке</item>
+      <item quantity="other">Изаберите највише <xliff:g id="COUNT_1">^1</xliff:g> ставки</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Недавно"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Прикажи изабранo"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Слике"</string>
@@ -59,6 +63,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> ставки</item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Додај (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Камера"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Преузето"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Омиљено"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Снимци екрана"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Желите ли да дозволите да <xliff:g id="APP_NAME_1">^1</xliff:g> измени <xliff:g id="COUNT">^2</xliff:g> аудио датотеку?</item>
       <item quantity="few">Желите ли да дозволите да <xliff:g id="APP_NAME_1">^1</xliff:g> измени <xliff:g id="COUNT">^2</xliff:g> аудио датотеке?</item>
