--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -46,7 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Weka"</string>
     <string name="deselect" msgid="4297825044827769490">"Acha kuchagua"</string>
     <string name="select" msgid="2704765470563027689">"Chagua"</string>
-    <!-- no translation found for select_up_to (2878367759927215675) -->
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">Chagua hadi vipengee <xliff:g id="COUNT_1">^1</xliff:g></item>
+      <item quantity="one">Chagua hadi kipengee <xliff:g id="COUNT_0">^1</xliff:g></item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Za hivi majuzi"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Angalia uliyochagua"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Picha"</string>
@@ -56,6 +59,12 @@
       <item quantity="one">Kipengee <xliff:g id="COUNT_0">^1</xliff:g></item>
     </plurals>
     <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Weka (<xliff:g id="COUNT">^1</xliff:g>)"</string>
+    <string name="picker_category_camera" msgid="4857367052026843664">"Kamera"</string>
+    <string name="picker_category_downloads" msgid="793866660287361900">"Vipakuliwa"</string>
+    <string name="picker_category_favorites" msgid="7008495397818966088">"Vipendwa"</string>
+    <string name="picker_category_screenshots" msgid="7216102327587644284">"Picha za skrini"</string>
+    <!-- no translation found for picker_category_videos (1478458836380241356) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Ungependa kuruhusu <xliff:g id="APP_NAME_1">^1</xliff:g> ibadilishe faili <xliff:g id="COUNT">^2</xliff:g> za sauti?</item>
       <item quantity="one">Ungependa kuruhusu <xliff:g id="APP_NAME_0">^1</xliff:g> ibadilishe faili hii ya sauti?</item>
